--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                             <img src="assets/imgs/pencil-case.svg"
                                 alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page"
                                 class="icon">
-                            <h6 class="title">Adipisicing</h6>
+                            <h6 class="title">Coaching</h6>
                             <p class="subtitle">Labore velit culpa adipisci excepturi consequuntur itaque in nam
                                 molestias dolorem iste quod.</p>
                         </div>
@@ -131,7 +131,7 @@
                             <img src="assets/imgs/responsive.svg"
                                 alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page"
                                 class="icon">
-                            <h6 class="title">Sapiente</h6>
+                            <h6 class="title">Polishing</h6>
                             <p class="subtitle">Labore velit culpa adipisci excepturi consequuntur itaque in nam
                                 molestias dolorem iste quod.</p>
                         </div>
@@ -143,7 +143,7 @@
                             <img src="assets/imgs/toolbox.svg"
                                 alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page"
                                 class="icon">
-                            <h6 class="title">Placeat</h6>
+                            <h6 class="title">Fixing</h6>
                             <p class="subtitle">Labore velit culpa adipisci excepturi consequuntur itaque in nam
                                 molestias dolorem iste quod.</p>
                         </div>
@@ -155,7 +155,7 @@
                             <img src="assets/imgs/analytics.svg"
                                 alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page"
                                 class="icon">
-                            <h6 class="title">Iusto</h6>
+                            <h6 class="title">Illustrating</h6>
                             <p class="subtitle">Labore velit culpa adipisci excepturi consequuntur itaque in nam
                                 molestias dolorem iste quod.</p>
                         </div>
@@ -362,7 +362,7 @@
         <footer class="footer">
             <p class="mb-0">Copyright
                 <script>document.write(new Date().getFullYear())</script> &copy; <a
-                    href="http://www.devcrud.com">DevCRUD</a>
+                    href="http://www.devcrud.com">Duc Manh Nguyen</a>
             </p>
             <div class="social-links text-right m-auto ml-sm-auto">
                 <a href="javascript:void(0)" class="link"><i class="ti-facebook"></i></a>
